## 0.2.0 / 2018-02-24

This release breaks controllers constructors to allow passing a metrics recorder backend.

* [BUGFIX] Fix passing a nil logger to make controllers execution break.
* [ENHANCEMENT] Controllers record metrics about queued and processed events.
* [FEATURE] Add Prometheus metrics backend.
* [FEATURE] Add metrics interface.
* [FEATURE] Add concurrent controller implementation.

## 0.1.0 / 2018-02-15

* [FEATURE] Add CRD client check for kubernetes apiserver (>=1.7)
* [FEATURE] Add CRD ensure (waits to be present after registering a CRD)
* [FEATURE] Add CRD client tooling
* [FEATURE] Add multiple CRD and multiple controller operator.
* [FEATURE] Add single CRD and single controller operator.
* [FEATURE] Add sequential controller implementation.
* [FEATURE] Dependencies managed by dep and vendored.