@@ -1,3 +1,9 @@
+## x.x.x / xxxx-xx-xx
+
+* [ENHANCEMENT] Let customizing (using configuration) the retries of event processing errors on controllers.
+* [ENHANCEMENT] Controllers now can be created using a configuration struct.
+* [ENHANCEMENT] Add support for Kubernetes 1.10.
+
 ## 0.2.0 / 2018-02-24
 
 This release breaks controllers constructors to allow passing a metrics recorder backend.
